# multimonitor

./: .gitignore  .hgignore  .hgtags  HACKING  Makefile.am  README  autogen.sh  configure.ac  multi-monitor.desktop.in
src/: Makefile  Makefile.am  about.c  about.h  battalert.c  battalert.h  battery.c  battery.h  cpufreq.c  cpufreq.h  cpuload.c  cpuload.h  datasrc.h  disk.c  disk.h  draw.c  draw.h  line.c  line.h  linux_battery.c  linux_cpufreq.c  linux_cpuload.c  list.c  list.h  loadavg.c  loadavg.h  main.c  main.h  mccdatasource.c  mccdatasource.h  mccgraph.c  mccgraph.h  mccsrcbattery.c  mccsrcbattery.h  mccsrccpufreq.c  mccsrccpufreq.h  mccsrccpuload.c  mccsrccpuload.h  mccsrcdiskio.c  mccsrcdiskio.h  (+24 more)
